--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <!-- via local -->
     <h3>ADDED IMAGE VIA LOCAL STORAGE</h3>
-    <img src="/apple.jpg" alt="car image"><br>
+    <img src="/apple.jpg" alt="appler image"><br>
     <!-- via CDN -->
     <h3>ADDED IMAGE VIA CDN</h3>
     <img src="https://ik.imagekit.io/jxnoajxft/Html/apple.jpg?updatedAt=1747721969344"><br>
